corrigido erro de redirecionamento JovemdeFuturo.html

--- a/aboutus/jovemDeFuturo/jovemDeFuturo.html
+++ b/aboutus/jovemDeFuturo/jovemDeFuturo.html
@@ -19,7 +19,7 @@
             <div class="nav_but"><a href="../../index.html" class="nav_txt"><b class="bot_txt">PÁGINA INICIAL</b></a></div>
             <div class="nav_but"><a href="../aboutus.html" class="nav_txt"><b class="bot_txt">SOBRE NÓS</b></a></div>
             <div class="nav_but"><a href="../../sejaAprendiz/seja aprendiz.html" class="nav_txt"><b class="bot_txt">SEJA APRENDIZ</b></a></div>
-            <div class="nav_but"><a href="../../contato/entre em contato.html" class="nav_txt"><b class="bot_txt">ENTRE EM CONTATO</b></a></div>
+            <div class="nav_but"><a href="./jovemDeFuturo.html" class="nav_txt"><b class="bot_txt">ENTRE EM CONTATO</b></a></div>
         </nav>
         
         <div class="sep_cont"></div>
